Fix bottom scroll cutoff:

--- a/imports/ui/App.css
+++ b/imports/ui/App.css
@@ -62,7 +62,7 @@
 }
 
 #CardList {
-  height: 100vh !important;
+  height: 85vh;
   overflow: scroll;
 }
 
